# envira

./: .gitignore  CNAME  Cargo.toml  README.md  cli.py  envira.sh  index.html  pixi.toml  pyproject.toml  run.sh  run_user.sh  verify.html  verify.sh
.github/integration-test/: Dockerfile-arch-user  Dockerfile-fedora-user  Dockerfile-manjaro-user  Dockerfile-ubuntu-user
.github/workflows/: lagacy_test.yaml  release.yaml  release_web.yaml  test.yaml
envira/cli/: __init__.py  installer.py
envira/software/: essentials.py
envira/util/: impl_dispatcher.py
files/: fix_zellij_kdl.py
scripts/: run-container-parity-check.sh  run-launch-parity-matrix.sh
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  tui.rs
src/catalog/: manifest.toml  mod.rs
src/engine/: mod.rs  types.rs
src/executor/: builtin.rs  execute.rs  mod.rs  operation.rs  plan.rs  result.rs  runner.rs
src/planner/: action.rs  mod.rs
src/platform/: mod.rs
src/verifier/: context.rs  mod.rs  probe.rs  reduce.rs  result.rs  runner.rs  service.rs  spec.rs
test/: test_impl_dispatcher.py
tests/: backend_mappings.rs  catalog_coupling_audit.rs  catalog_validation.rs  ci_catalog_contract.rs  cli_help.rs  executor_operations.rs  headless_cli.rs  launch_parity_matrix.rs  legacy_catalog_rejection.rs  planner.rs  planner_verifier_integration.rs  platform_scope.rs  tui.rs  verifier_coverage.rs  verifier_domain.rs  verifier_probes.rs  verifier_services.rs  version_gate.rs  wrapper_bootstrap.rs
tests/fixtures/: catalog_contract_duplicate_bundle_table.toml  catalog_contract_valid.toml  (+9 more)
user/: index.html
(+5 files in other folders)
